[minor fix] overflow in card-body

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -17,6 +17,7 @@
 }
 p,nav,h5,h3,.h3,h2,.h2 {
     font-family: "Plus Jakarta Sans", sans-serif;
+    margin: 0;
 }
 
 html,body {
