--- a/src/style/eventfeed.scss
+++ b/src/style/eventfeed.scss
@@ -1,9 +1,5 @@
-// .eventbody > .fs-4 {
-//     // font-size: 100%!important;
-// }
-// .eventbody>.lead {
-//     // font-size: 80% !important;
-// }
-// .eventbody>.fs-6 {
-//     // font-size: 65% !important;
-// }
+.boxDesign {
+    max-width: 400px; 
+    max-height: 400px;
+    overflow: scroll;
+}
